--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "license": "ISC",
     "dependencies": {
         "@ts-core/common": "~3.0.24",
+        "@ts-core/socket-common": "~3.0.1",
         "socket.io-client": "^4.6.1"
     },
     "devDependencies": {
